# env

./: .gitignore  README.md  configuration.nix  flake.nix  ghostty_config.txt  justfile  package.json  starship.toml
assets/: ghostty_config.txt  jj_config.toml  starship-insignia.toml  starship.toml
assets/cleanshot/: IKPreferencesLast.json  LAVArecordVideo.json  LAVAtakeAllInOne.json  LAVAtakeArea.json  LAVAtakeFullscreen.json
assets/editors/cursor/: extensions.txt  keybindings.json  settings.json
assets/editors/vscode/: extensions.txt  keybindings.json  settings.json
assets/fonts/: BERKELEY_MONO.md  README.md
assets/ghostty/themes/: test
assets/karabiner/: karabiner.json
hosts/: eulogia.nix  insignia.nix
modules/darwin/: core.nix  homebrew.nix  system-defaults.nix
modules/darwin/apps/: cleanshot.nix  flux.nix  raycast.nix
modules/home/: atuin.nix  codex.nix  core.nix  editors.nix  git.nix  jj.nix  mise.nix  npm-tools.nix  shell.nix  ssh.nix
modules/home/apps/: direnv.nix  fonts.nix  ghostty.nix  karabiner.nix  raycast.nix  rectangle.nix  starship.nix
scripts/: bootstrap_dev_tools.sh  build_insigna_logo_font.sh  build_planetscale_logo_font.sh  install_berkeley_mono_fonts.sh  install_codex_app.sh  install_editor_extensions.sh  install_final_cut.sh  post_switch.ts
tools/glassterm/: Cargo.toml
tools/glassterm/src/: main.rs
tools/glassterm/tests/: terminal_harness.rs
tools/insignia/: Cargo.toml
tools/insignia/src/: main.rs
tools/insignia/tests/: terminal_harness.rs
tools/npm-globals/: package-lock.json  package.json
